infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /api/?(.*)
            backend:
              serviceName: footprint-server-srv
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: footprint-client-srv
              servicePort: 3000
